test/e2e/testdata/envoy-proxy.yaml
kind: EnvoyProxy
metadata:
  name: test-only-proxy-config
  namespace: envoy-gateway-system
spec:
  provider:
    kubernetes:
      envoyDeployment:
        patch:
          type: StrategicMerge
          value:
            spec:
              template:
                spec:
                  containers:
                  - args:
                    - --service-cluster test-only
                    - --log-level debug
                    - --local-address-ip-version
                    - v6
                    - --cpuset-threads
                    - --service-node $(ENVOY_POD_NAME)
                    - |
                      --config-yaml admin:
                        access_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            path: /dev/null
                        address:
                          socket_address:
                            address: 127.0.0.1
                            port_value: 19000
                      layered_runtime:
                        layers:
                        - name: global_config
                          static_layer:
                            envoy.restart_features.use_eds_cache_for_ads: true
                            re2.max_program_size.error_level: 4294967295
                            re2.max_program_size.warn_level: 1000
                      dynamic_resources:
                        ads_config:
                          api_type: DELTA_GRPC
                          transport_api_version: V3
                          grpc_services:
                          - envoy_grpc:
                              cluster_name: xds_cluster
                          set_node_on_first_message_only: true
                        lds_config:
                          ads: {}
                          resource_api_version: V3
                        cds_config:
                          ads: {}
                          resource_api_version: V3
                      static_resources:
                        listeners:
                        - name: envoy-gateway-proxy-ready-0.0.0.0-19001
                          address:
                            socket_address:
                              address: "::"
                              port_value: 19001
                              protocol: TCP
                              ipv4_compat: true
                          filter_chains:
                          - filters:
                            - name: envoy.filters.network.http_connection_manager
                              typed_config:
                                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                                stat_prefix: eg-ready-http
                                route_config:
                                  name: local_route
                                  virtual_hosts:
                                  - name: prometheus_stats
                                    domains:
                                    - "*"
                                    routes:
                                    - match:
                                        prefix: /stats/prometheus
                                      route:
                                        cluster: prometheus_stats
                                http_filters:
                                - name: envoy.filters.http.health_check
                                  typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                                    pass_through_mode: false
                                    headers:
                                    - name: ":path"
                                      string_match:
                                        exact: /ready
                                - name: envoy.filters.http.router
                                  typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                        clusters:
                        - name: prometheus_stats
                          connect_timeout: 0.250s
                          type: STATIC
                          lb_policy: ROUND_ROBIN
                          load_assignment:
                            cluster_name: prometheus_stats
                            endpoints:
                            - lb_endpoints:
                              - endpoint:
                                  address:
                                    socket_address:
                                      address: 127.0.0.1
                                      port_value: 19000
                        - connect_timeout: 10s
                          load_assignment:
                            cluster_name: xds_cluster
                            endpoints:
                            - load_balancing_weight: 1
                              lb_endpoints:
                              - load_balancing_weight: 1
                                endpoint:
                                  address:
                                    socket_address:
                                      address: envoy-gateway
                                      port_value: 18000
                          typed_extension_protocol_options:
                            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
                              "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions"
                              explicit_http_config:
                                http2_protocol_options:
                                  connection_keepalive:
                                    interval: 30s
                                    timeout: 5s
                          name: xds_cluster
                          type: STRICT_DNS
                          transport_socket:
                            name: envoy.transport_sockets.tls
                            typed_config:
                              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
                              common_tls_context:
                                tls_params:
                                  tls_maximum_protocol_version: TLSv1_3
                                tls_certificate_sds_secret_configs:
                                - name: xds_certificate
                                  sds_config:
                                    path_config_source:
                                      path: "/sds/xds-certificate.json"
                                    resource_api_version: V3
                                validation_context_sds_secret_config:
                                  name: xds_trusted_ca
                                  sds_config:
                                    path_config_source:
                                      path: "/sds/xds-trusted-ca.json"
                                    resource_api_version: V3
                    name: envoy
      envoyService:
        externalTrafficPolicy: Local
        patch:
          value:
            spec:
              ipFamilies:
              - IPv6
              - IPv4
             ipFamilyPolicy: PreferDualStack
        type: LoadBalancer
    type: Kubernetes
